<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memory Game</string>
    <string name="score">Congratulations</string>
    <string name="score2">You have used %1$s to complete the game.</string>
    <string name="score2_vertical">You have used %1$s to complete the game.</string>
    <string name="leaderboard">Leaderboard: </string>
    <string name="back_to_main">Play Again</string>
    <string name="back_home">Back to Main</string>
    <string name="enter_player_name">Enter your name...</string>
    <string name="play_now">Play Now</string>
    <string name="introTxt">GDipSA52 Team 3</string>
    <string name="nameTxt">Enter your Name</string>
    <string name="howToPlay">
        \u0020\u0020How to Play?\n
        1. Enter your name and press \"Start\"\n
        2. Enter a URL and press \"Fetch\"\n
        3. Wait for 20 images to be downloaded\n
        4. Select 6 images for the game\n
        5. Click on any 2 cards to see if they match\n
        6. Continue until all cards are matched\n
        7. The timer will stops when all the cards are matched\n
        8. View your current and best timing\n
    </string>
    <string name="downloading">downloading %1$d of 20 images</string>
<string name="leader1">%1$s \t\t\t\t\t\t\t\t\t\t\t %2$s</string>
    <string name="download_complete">Download completed for 20 of 20 images!</string>
    <string name="errorUrlNotification">Error! Please enter a correct URL.</string>
    <string name="no_enough_image">not enough valid image.</string>
</resources>