<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EndActivity">

    <TextView
        android:id="@+id/scoreChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/score2"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/scoreline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/leaderBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/leaderboard"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical">
    <TextView
        android:id="@+id/bestOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/bestTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/bestThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/playAgainBtn"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:text="@string/back_to_main"
        android:textSize="15sp"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:layout_weight="3"
        android:backgroundTint="@color/tiffany_700"/>
    <Button
        android:id="@+id/homeBtn"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:text="@string/back_home"
        android:textSize="15sp"
        android:layout_margin="8dp"
        android:padding="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue" />
    </LinearLayout>
</LinearLayout>